Updated CSS to avoid image distortion

--- a/index.css
+++ b/index.css
@@ -174,6 +174,9 @@ cite {
     font-family: "TimesNRCondensedItalic";
 }
 
+img {
+    max-width: 100%;
+}
 
 .flow-0>*+* {
     margin-top: var(--s0);
